added DWS page and more fun items

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@ layout: default
     </div>
   </a>
 
-  <!-- <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-11.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">DWS</h3>
       </div>
     </div>
-  </a> -->
+  </a>
 
   <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
@@ -114,14 +114,14 @@ layout: default
     </div>
   </a> -->
 
-  <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Vans</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
