--- a/play.html
+++ b/play.html
@@ -42,11 +42,43 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/espn.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/accordion.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/m&m.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/bag.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/sew.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/vans.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/type.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/uncharted.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/leaf.jpg" alt="">
   </div>
 
 </section>
