updated play page

--- a/play.html
+++ b/play.html
@@ -34,23 +34,7 @@ layout: default
 <section class="grid" id="play" >
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/polaroids.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/report.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/espn.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/accordion.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/m&m.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
@@ -58,11 +42,27 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/espn.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/esports.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/sew.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/zumies.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/accordion.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/polaroids.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
@@ -75,6 +75,22 @@ layout: default
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/uncharted.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/invitation.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/menu.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/HT.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
