--- a/dws.html
+++ b/dws.html
@@ -44,16 +44,12 @@ layout: default
         <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/hoodie.jpg" alt="DWS hoodie">
       </div>
 
-      <div class="card unit s-1  island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/logos-02.jpg" alt="DWS hoodie">
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/DWS-banners.png" alt="DWS banners">
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/DWS-banners.png" alt="DWS hoodie">
-      </div>
-
-      <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/calendar.jpg" alt="DWS hoodie">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/dws/calendar.jpg" alt="DWS calendar">
       </div>
 
 
