--- a/index.html
+++ b/index.html
@@ -42,24 +42,6 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">The Blurry Pixel</h3>
-      </div>
-    </div>
-  </a>
-
-  <!-- <a href="{{site.baseurl}}pottery" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Ottawa Guild of Potters</h3>
-      </div>
-    </div>
-  </a> -->
-
   <!-- <a href="{{site.baseurl}}glow" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
@@ -78,6 +60,15 @@ layout: default
     </div>
   </a>
 
+  <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">The Blurry Pixel</h3>
+      </div>
+    </div>
+  </a>
+
   <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-11.jpg" alt="">
@@ -87,11 +78,20 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}ottawa guild of potters" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-12.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">I Scream</h3>
+        <h3 class="">Ottawa Guild of Potters</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-13.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Coming Soon</h3>
       </div>
     </div>
   </a>
@@ -101,6 +101,15 @@ layout: default
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Black Fox Coffee</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">I Scream</h3>
       </div>
     </div>
   </a>
@@ -123,23 +132,23 @@ layout: default
     </div>
   </a> -->
 
-  <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Nerd Alert</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
-  <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Yellow Jackets</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <!-- <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
