--- a/play.html
+++ b/play.html
@@ -50,7 +50,7 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/sew.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/shoes.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
@@ -62,11 +62,11 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/polaroids.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/wedding.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/vans.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/games.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
@@ -74,19 +74,19 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/isometric.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/vans.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/uncharted.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/invitation.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/menu.jpg" alt="">
-  </div>
-
-  <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/polaroids.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
@@ -94,7 +94,23 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/menu.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/leaf.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/sew.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+  </div>
+
+  <div class="relative unit xs-1-2 m-1-2 l-1-4">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/invitation.jpg" alt="">
   </div>
 
 </section>
