--- a/solink.html
+++ b/solink.html
@@ -14,7 +14,7 @@ layout: default
         <h4 class="milli">Deliverables</h4>
         <p class="">Branding, <br>Logo <br>Marketing </p>
         <h4 class="milli pad-t-2">Challenge</h4>
-        <p class="">Redesign the company logo to look more reflect the growth of the business and the brand while keeping it a bold and strong. Create a logo that fits better with customer logos and partners visually.</p>
+        <p class="">Redesign the company logo to look more reflect the growth of the business and the brand while keeping it a bold and strong. Create a logo that fits better with customer logos and partners visually. The logo must work in a square or rectangular space depending on where it will be shown.</p>
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
