--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@ layout: default
     </div>
   </a>
 
-  <!-- <a href="{{site.baseurl}}glow" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Glow for Kids</h3>
+        <h3 class="">The Blurry Pixel</h3>
       </div>
     </div>
-  </a> -->
+  </a>
 
   <a href="{{site.baseurl}}drbia" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
@@ -60,20 +60,11 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-14.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">The Blurry Pixel</h3>
-      </div>
-    </div>
-  </a>
-
-  <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-11.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">DWS</h3>
+        <h3 class="">COMING SOON</h3>
       </div>
     </div>
   </a>
@@ -87,20 +78,29 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-13.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-11.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Coming Soon</h3>
+        <h3 class="">DWS</h3>
       </div>
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Black Fox Coffee</h3>
+      </div>
+    </div>
+  </a> -->
+
+  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-13.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">COMING SOON</h3>
       </div>
     </div>
   </a>
@@ -114,11 +114,29 @@ layout: default
     </div>
   </a>
 
-  <!-- <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Canadian</h3>
+        <h3 class="">COMING SOON</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Yellow Jackets</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Nerd Alert</h3>
       </div>
     </div>
   </a> -->
@@ -128,24 +146,6 @@ layout: default
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Vans</h3>
-      </div>
-    </div>
-  </a> -->
-
-  <!-- <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Nerd Alert</h3>
-      </div>
-    </div>
-  </a> -->
-
-  <!-- <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Yellow Jackets</h3>
       </div>
     </div>
   </a> -->
