adding in the black fox coffee again

--- a/index.html
+++ b/index.html
@@ -60,14 +60,23 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Black Fox Coffee</h3>
+      </div>
+    </div>
+  </a>
+
+  <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-14.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">COMING SOON</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <a href="{{site.baseurl}}ottawa guild of potters" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
@@ -86,15 +95,6 @@ layout: default
       </div>
     </div>
   </a>
-
-  <!-- <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Black Fox Coffee</h3>
-      </div>
-    </div>
-  </a> -->
 
   <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
