square logo updates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
 
   <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-09.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-09-2.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Solink</h3>
       </div>
@@ -44,7 +44,7 @@ layout: default
 
   <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-05.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">The Blurry Pixel</h3>
       </div>
@@ -53,7 +53,7 @@ layout: default
 
   <a href="{{site.baseurl}}drbia" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-10.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-10.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Downtown Rideau BIA</h3>
       </div>
@@ -62,7 +62,7 @@ layout: default
 
   <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-14.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-14.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">COMING SOON</h3>
       </div>
@@ -71,7 +71,7 @@ layout: default
 
   <a href="{{site.baseurl}}ottawa guild of potters" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-12.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-12.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Ottawa Guild of Potters</h3>
       </div>
@@ -80,7 +80,7 @@ layout: default
 
   <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-08.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Black Fox Coffee</h3>
       </div>
@@ -89,7 +89,7 @@ layout: default
 
   <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-11.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-11.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">DWS</h3>
       </div>
@@ -98,7 +98,7 @@ layout: default
 
   <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-13.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-13.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">COMING SOON</h3>
       </div>
@@ -107,7 +107,7 @@ layout: default
 
   <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-02.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">I Scream</h3>
       </div>
@@ -116,7 +116,7 @@ layout: default
 
   <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-07.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">COMING SOON</h3>
       </div>
@@ -125,7 +125,7 @@ layout: default
 
   <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-01.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Yellow Jackets</h3>
       </div>
@@ -134,7 +134,7 @@ layout: default
 
   <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-03.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Nerd Alert</h3>
       </div>
@@ -143,7 +143,7 @@ layout: default
 
   <!-- <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-06.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Vans</h3>
       </div>
@@ -152,7 +152,7 @@ layout: default
 
   <!-- <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-04.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Adventure</h3>
       </div>
