--- a/play.html
+++ b/play.html
@@ -57,6 +57,10 @@ layout: default
     <img class="img-flex" src="{{site.baseurl}}/images/play/zumies.jpg" alt="">
   </div>
 
+  <div class="relative unit xs-1 m-1 l-1-2">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/dbd.gif" alt="">
+  </div>
+
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/accordion.jpg" alt="">
   </div>
@@ -89,6 +93,10 @@ layout: default
     <img class="img-flex" src="{{site.baseurl}}/images/play/polaroids.jpg" alt="">
   </div>
 
+  <div class="relative unit xs-1 m-1 l-1-2">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/ridge.gif" alt="">
+  </div>
+
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
     <img class="img-flex" src="{{site.baseurl}}/images/play/HT.jpg" alt="">
   </div>
@@ -106,7 +114,7 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/hayley.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/wedding-2.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
