--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
     <div class="unit island bannertext s-2-3">
       <h1 class="">Hey There!</h1>
-      <p class="milli">My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
+      <p class="milli">My name is Jaimie and I'm a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
     </div>
   </div>
 </div>
