--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
   <!--PORTFOLIO-->
 <section class="grid" id="work" >
 
-  <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}solink-logo" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-09-2.jpg" alt="">
       <div class="content center-contents">
