Adding more images to Solink

--- a/solink-logo.html
+++ b/solink-logo.html
@@ -17,7 +17,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/wall.jpg" alt="Solink logo on wall">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/solink-og-sketch.jpg" alt="Solink original sketch turned vector">
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
@@ -83,6 +83,14 @@ layout: default
           <li>Motion - transaction - action</li>
           <li>LP - security - operations</li>
           <li>Retail - restaurants - banks</li>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/wall.jpg" alt="Logo on wall">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/card.jpg" alt="Solink business cards">
       </div>
 
   </div>
