Solink text updates

--- a/solink-marketing.html
+++ b/solink-marketing.html
@@ -24,12 +24,48 @@ layout: default
         <h4 class="milli">Deliverables</h4>
         <p class="">Marketing, Branding </p>
         <h4 style="padding-top: 20px" class="milli">Challenge</h4>
-        <p class="">Redesign brand materials to offer a fresh look. Keeping text short and catchy to engage readers. Keeping a strong sense of brand identity throughout all marketing mediums.</p>
+        <p class="">Redesign brand materials to offer a fresh look. Keeping a strong sense of brand identity throughout all marketing mediums and discovering new mediums to advertise the brand.</p>
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
         <h4 class="milli">Outcome</h4>
-        <p class="">Stronger marketing materials to grab viewers attention.</p>
+        <p class="">Stronger marketing materials to grab viewers attention. With many outlets like tradeshows, paid social media, and email campaigns, we can reach many new prospects for our sales team to reach out to.</p>
+      </div>
+
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">HTML email campaigns</h4>
+        <p class="">When it comes to email marketing, you can only reach your prospects in your own database. Solink has done many different email blasts with many different technology and SaaS magazines and subscription services to reach larger audiences. However, most tech companies do their email blasts with HTML-coded emails. This opportunity allowed me to learn how to code HTML emails and meet all the spec requirements.</p>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/html.jpg" alt="HTML coding for emails">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/social-gif.gif" alt="Two social media ads on iPhones">
+      </div>
+
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">Social</h4>
+        <p class="">With how fast people scroll through social media, your ads must be unique and eye-catching to engage your viewers. So I created a series of motion gifs showing the product and its capabilities to capture our viewers' attention. Of course, you can get a lot from a still image, but it catches the eye more and makes you want to watch it when things are moving. One of our best ads was having the illusion that a phone was coming out of the LinkedIn ad itself. Most of our competitors use static images, so it set us apart from them.</p>
+      </div>
+
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">Collateral</h4>
+        <p class="">To give our prospects, customers, and employees more information about the product, we provide many documents to highlight different aspects of the product. With the logo rebranding and all the app development over the years, many documents have been rebranded with vibrant new colours and high-resolution mockups of the app.</p>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/onepagers.jpg" alt="Two one pager documents">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/jib-banners.jpg" alt="Two Solink tradeshow banners">
+      </div>
+
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">Tradeshows</h4>
+        <p class="">Solink's sales team travels year-round throughout North America to sell the product at tradeshows. Most tradeshows are filled with hundreds of small booths. With people walking around the convention, you need to have your logo up high for people to see over the crowds of people. You only have a few seconds to catch people's attention while they walk by so that they will stop and learn more about the product at the booth.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
@@ -39,7 +75,7 @@ layout: default
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/toast.jpg" alt="Solink plus Toast one pager">
       </div>
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/jib-banners.jpg" alt="Two Solink tradeshow banners">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/social-ads.jpg" alt="Two Solink social media ads on iphones">
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
@@ -64,7 +100,6 @@ layout: default
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/bank.jpg" alt="Bank onepager">
       </div>
-
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/qsr-mag.jpg" alt="Solink customer infographic">
