--- a/solink-web.html
+++ b/solink-web.html
@@ -24,14 +24,32 @@ layout: default
         <h4 class="milli">Deliverables</h4>
         <p class="">Web design, Marketing </p>
         <h4 style="padding-top: 20px" class="milli">Challenge</h4>
-        <p class="">Redesign landing pages to grab the views attention and increase landing page view time. Increase webpage visits with interlinking and stronger SEO.</p>
+        <p class="">Redesign landing pages to grab the viewers' attention and increase landing page view time. Increase webpage visits with interlinking and stronger SEO.</p>
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
         <h4 class="milli">Outcome</h4>
-        <p class="">Simple to read landing pages that get to the point before you scroll. Landing pages that give context to the viewer with introductory paragraphs to educate as well as providing CTAs and forms to help dive sales before the fold.</p>
+        <p class="">Simple to read landing pages that get to the point above the fold. Landing pages that give context to the viewer with introductory paragraphs to educate and provide CTAs and forms to help drive sales without the need to scroll much.</p>
       </div>
 
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">Homepage</h4>
+        <p class="">Homepage banners are essential to capture your audience's attention so that way they read more and want to learn more about what you are showing. I researched how to try improving it overall and how to improve it from our competitors' banners. The animated banner took too long to load, was too tall, and the banner text was constrained to a circle that took up less than half the banner. Many other tech companies have tall banners and don't have CTAs front and center to reel in customers.</p>
+        <p>To improve our banner, I reduced the height of the banner that way viewers can get a glimpse of what's below the banner and entice them to keep scrolling and learn more. Removing the circle around the text allows the text to be larger and take up more space in the banner. Thus, making it bolder and more readable. Reducing the text to something shorter and more to the point tells the viewer what we offer before reading more.</p>
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/website-screens.jpg" alt="Viewing differnt website screens">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/laptop-template.jpg" alt="Viewing differnt website screens">
+      </div>
+
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <h4 style="font-weight:700;font-size:16px;color:#515151;">Landing pages</h4>
+        <p class="">The main priority of each landing page is to talk about the benefits of Solink right away to entice people to read more or to book a demo. Knowing how vital real estate is above the fold means that there has to always be a CTA or a form for people to fill out because we can't count on people scolling further down to get to a form.</p>
+      </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/laptop-mockup-1.jpg" alt="Three Solink tradeshow banners">
