Changes to Solink and blurry

--- a/blurrypixel.html
+++ b/blurrypixel.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Blurry Pixel sign">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/blurry/blurry-pixel-gif.gif" alt="Blurry Pixel sign">
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
@@ -40,12 +40,16 @@ layout: default
         <p>The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. </p>
       </div>
 
-      <div class="card unit s-1 m-1 l-1-2 island">
+      <div class="card unti s-1 m-1 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="Logo Ideas">
       </div>
 
-      <div class="card unit s-1 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="Final Logo">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/blurry/blurry-sign.jpg" alt="Blurry Pixel sign">
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
@@ -55,16 +59,18 @@ layout: default
       <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/drink.jpg" alt="Beer glass">
       </div>
+    </div>
+  </section>
 
       <!-- <div class="unit s-1 m-1-2 l-1-4 island">
         <p class="milli">The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The establishment used to just reuse printed menus for customers to use. This allowed the menus to get stained and also had no design to it. I created a simple double sided menu that uses green on black text on one side which represents the monochrome monitors that inspired the colours for the logo. With their small menu the items can be layed out more effectively when using both sides.</p>
       </div> -->
 
-      <div class="embed embed-16by9">
+      <!-- <div class="embed embed-16by9">
         <iframe class="embed-item" src="https://player.vimeo.com/video/254134218?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </div>
-    </div>
+    </div> -->
 
 
 
