--- a/solink-logo.html
+++ b/solink-logo.html
@@ -86,7 +86,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/wall.jpg" alt="Logo on wall">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/solink-logo-gif.gif" alt="Solink logo animated">
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
