Glow for Kids added

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}glow for kids" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-13.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">COMING SOON</h3>
+        <h3 class="">Glow for Kids</h3>
       </div>
     </div>
   </a>
