--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
     <div class="unit island bannertext s-2-3">
       <h1 class="">Hey There!</h1>
-      <p class="milli">My name is Jaimie and I'm a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
+      <p class="milli">My name is Jaimie and I'm a graphic designer/marketer. I specialize in <strong>branding</strong>, <strong>illustration</strong>, <strong>marketing</strong> and <strong>motion</strong>.</p>
     </div>
   </div>
 </div>
@@ -23,7 +23,7 @@ layout: default
     <div>
       <h3 class="yotta">Hey There!</h3>
     </div>
-    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario.<br> I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
+    <p>My name is Jaimie and I'm a graphic designer/marketer. I specialize in <strong>branding</strong>, <strong>illustration</strong>, <strong>marketing</strong> and <strong>motion</strong>.s</p>
   </div>
 </div>
 
