--- a/play.html
+++ b/play.html
@@ -50,7 +50,7 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/shoes.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/tnf-new-logo.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
