Added twitch assets to website

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@ layout: default
     </div>
   </a> -->
 
+  <a href="{{site.baseurl}}twitch" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-15.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Twitch</h3>
+      </div>
+    </div>
+  </a>
+
   <a href="{{site.baseurl}}ottawa guild of potters" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-12.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Ottawa Guild of Potters</h3>
-      </div>
-    </div>
-  </a>
-
-  <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-08.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Black Fox Coffee</h3>
       </div>
     </div>
   </a>
@@ -105,14 +105,23 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-08.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Black Fox Coffee</h3>
+      </div>
+    </div>
+  </a>
+
+  <!-- <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-02.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">I Scream</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
